# ttyg-langgraph

./: NLQ_with_LangGraph_ReAct_Agents.ipynb  NLQ_with_OpenAI_Assistants_API.ipynb  README.md  environment.yml  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: _pull_requests.yml  _release.yml
docker/: Dockerfile  config.ttl  docker-compose.yaml  graphdb_create.sh  similarity.json  start.sh  starwars-data.ttl
graphdb/: graphdb.py
jupyter_notebooks/: NLQ_with_LangChain_Agents.ipynb  NLQ_with_LangGraph_ReAct_Agents.ipynb  NLQ_with_OpenAI_Assistants_API.ipynb
nlq/: openai_assistant.py
nlq/tools/: __init__.py
nlq/tools/graphdb_tools/: __init__.py  base.py  fts_query_tool.py  iri_discovery.py  retrieval_query_tool.py  similarity_search_query_tool.py  sparql_query_tool.py
tests/unit_tests/: conftest.py  constants.py  test_autocomplete_search_tool.py  test_fts_tool.py  test_graphdb.py  test_iri_discovery_tool.py  test_ontology_schema_and_vocabulary_tool.py  test_run_agent.py  test_run_agent_for_evaluation.py  test_similarity_search_query_tool.py  test_sparql_query_tool.py
ttyg/agents/: __init__.py  openai_assistant.py  run_agent_for_evaluation.py
ttyg/graphdb/: graphdb.py
ttyg/tools/: __init__.py  base.py  now_tool.py
ttyg/tools/graphdb_tools/: __init__.py  autocomplete_search_tool.py  base.py  fts_tool.py  iri_discovery_tool.py  ontology_schema_and_vocabulary_tool.py  retrieval_query_tool.py  similarity_search_query_tool.py  sparql_query_tool.py  utils.py
ttyg/utils/: __init__.py  run_react_agent.py
